--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "mgcarre"
   ],
   "scripts": {
-    "postinstall": "npx webpack"
+    "build": "npx webpack",
+    "build:css": "npx sass src/styles/index.scss dist/bundle.css"
   },
   "devDependencies": {
     "css-loader": "^3.5.3",
@@ -19,7 +20,7 @@
   "author": "Nicolas Wurtz <git@nethenic.net>",
   "license": "MIT",
   "dependencies": {
-    "fontnik": "^0.6.0",
+    "sass": "^1.26.7",
     "svgo": "^1.3.2"
   }
 }
